changes made on the add,clear list and marked purchase buttons

--- a/index.html
+++ b/index.html
@@ -3,37 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cindy's Shopping App</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body  id="image">
+<body id="image">
    <main id="header">
-    <h1 id="head">Canvas shopping Center</h1>
-    <form >
-    <div>
-        <label for="item-name">Add item to the list</label>
-        <div>
-            <input required="" id="itemName" type="text" id="formControl" data-script="input" placeholder="your item here">
-           <button type="submit" id="addBtn">Add</button> 
-        </div>
+    <!--App Name -->
+    <h1 id="head">Cindy's Shopping App</h1>
+
+    <!-- Displaying Shopping Items -->
+    <div id="itemsDisplay">
+        <ol id="itemsOl"></ol>
     </div>
-    </form>
+    <!-- Generating Add button -->
     <div>
-        <button data-script="clear list button" id="btnDanger">Clear List</button>
-        <ol data-script="shopping list" id="listGroup"></ol>
+        <input required id="newItemName" type="text" placeholder="your item here">
+        <button type="button" id="addBtn">Add</button>
     </div>
-    <ul id="listGroup">
-        <li id="ListGroupItem">
-            <button id="btnSuccess">
-                Mark purchased
-            </button>
-
-        </li>
-
-    </ul>
-
-   </main> 
-    <script>src="index.js"</script>
+    <!--Generating Mark Purchased and Clear List Buttons -->
+    <div>
+        <button id="markP">Mark Purchased</button>
+        <button id="btnDanger">Clear List</button>
+    </div>
+   </main>
+    <script src="index.js"></script>
 </body>
-</div>
 </html>
